--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -49,7 +49,7 @@ a{
 }
 .logo_area img{
 	width: 400%;
-    height: 110%;
+    height: 137%;
 }
 
 /* 검색 박스 영역 */
@@ -66,7 +66,7 @@ a{
 	width: 100%;
     height: 100%;
     display: flex;
-    
+    /*추가부분 */
     margin-top: 67px;
     margin-left: 477px;
     justify-content: center;
@@ -301,6 +301,7 @@ a{
 }
 .slide_div img{
 	margin: auto;
+	margin-top:50px;
 }
 .slide_div_wrap{
 	padding: 15px 0 15px 0;
