--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -48,8 +48,8 @@ a{
 	float:left;
 }
 .logo_area img{
-	width: 100%;
-    height: 100%;
+	width: 400%;
+    height: 110%;
 }
 
 /* 검색 박스 영역 */
@@ -66,6 +66,8 @@ a{
 	width: 100%;
     height: 100%;
     display: flex;
+    margin-top: 67px;
+    margin-left: 477px;
     justify-content: center;
     align-items: center;
 }
@@ -81,7 +83,7 @@ a{
 }
 .search_input input{
     margin-left: 10px;
-    width: 57%;	
+    width: 20%;	
     font-size: 18px;
     padding-left: 2%;
 }
