--- a/src/main/webapp/resources/css/admin/authorManage.css
+++ b/src/main/webapp/resources/css/admin/authorManage.css
@@ -107,7 +107,7 @@ ul{
     color: white;	
 }
 
-	/* 소매자 목록 영역 */
+	/* 배송지 목록 영역 */
 .author_table_wrap{
 	padding: 20px 35px
 }
@@ -137,7 +137,7 @@ ul{
 .th_column_5{
 	width:140px;
 }
-/* 소매자 상세 페이지 이동 태그 */
+/* 배송지 상세 페이지 이동 태그 */
 .author_table a{
 	color:#1088ed;
 	font-weight: 500;
