--- a/src/main/webapp/resources/css/admin/goodsDetail.css
+++ b/src/main/webapp/resources/css/admin/goodsDetail.css
@@ -146,7 +146,7 @@ ul{
     cursor:pointer;
 }
 
-.authorId_btn {						/* 소매자 선택 css 설정 */
+.authorId_btn {						/* 배송지 선택 css 설정 */
     margin-left: 20px;
     width: 14%;
     height: 38px;
