--- a/src/main/webapp/resources/css/admin/goodsEnroll.css
+++ b/src/main/webapp/resources/css/admin/goodsEnroll.css
@@ -158,7 +158,7 @@ input[name='publeYear'] {
     text-align: center;
 }
 
-.authorId_btn {						/* 소매자 선택 css 설정 */
+.authorId_btn {						/* 배송지 선택 css 설정 */
     margin-left: 20px;
     width: 14%;
     height: 38px;
