--- a/src/main/webapp/resources/css/admin/orderList.css
+++ b/src/main/webapp/resources/css/admin/orderList.css
@@ -106,7 +106,7 @@ ul{
     line-height: 80px;
     color: white;	
 }
-	/* 소매자 목록 영역 */
+	/* 배송지 목록 영역 */
 .order_table_wrap{
 	padding: 20px 35px;
 	min-height: 570px;
